<resources>
    <string name="app_name">RecipeApp-TestDeveloper</string>
    <string name="title">Recipe App</string>
    <string name="type">Select recipe</string>
    <string name="enter">Enter</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="hintIngredients">Ingredients (Please use numbers)</string>
    <string name="hintSteps">Steps (Please use numbers)</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="prep_time">Prep Time</string>
    <string name="add_recipe">Add Recipe</string>
</resources>
