<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dm_20"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="@dimen/tv_30"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvRecipeType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:text="@string/type"
        android:gravity="center"
        android:textSize="@dimen/tv_20"
        android:layout_marginTop="@dimen/dm_20"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/spTypeRecipe"
        android:layout_width="@dimen/dm_150"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dm_20"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tvRecipeType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:textSize="@dimen/tv_20"
        android:textStyle="normal"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_margin="@dimen/dm_20"
        app:layout_constraintTop_toBottomOf="@id/spTypeRecipe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateOnly="true"
        android:keepScreenOn="true"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/dm_20"
        app:layout_constraintTop_toBottomOf="@id/btnEnter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>